refactor and feat: clean implement and improve post module.
