# internal/model/model.go
@@ -6,9 +6,9 @@ import (
 	"github.com/OJoklrO/forum/pkg/setting"
 	"github.com/jinzhu/gorm"
 	_ "github.com/jinzhu/gorm/dialects/mysql"
-	"time"
 )
 
+// todo: delete
 type Model struct {
 	ID uint32 `gorm:"primary_key" json:"id"`
 	CreatedBy string `json:"created_by"`
@@ -34,61 +34,9 @@ func NewDBEngine(databaseSetting *setting.DatabaseSettings) (*gorm.DB, error) {
 	}
 
 	db.SingularTable(true)
-	db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
-	db.Callback().Delete().Replace("gorm:delete", deleteCallback)
 
 	db.DB().SetMaxIdleConns(databaseSetting.MaxIdleConns)
 	db.DB().SetMaxOpenConns(databaseSetting.MaxOpenConns)
 
 	return db, nil
-}
-
-func updateTimeStampForCreateCallback(scope *gorm.Scope) {
-	if !scope.HasError() {
-		nowTime := time.Now().Unix()
-		if createTimeField, ok := scope.FieldByName("CreatedOn"); ok {
-			if createTimeField.IsBlank {
-				_ = createTimeField.Set(nowTime)
-			}
-		}
-	}
-}
-
-func deleteCallback(scope *gorm.Scope) {
-	if !scope.HasError() {
-		var extraOption string
-		if str, ok := scope.Get("gorm:delete_option"); ok {
-			extraOption = fmt.Sprint(str)
-		}
-
-		deleteOnField, hasDeletedOnField := scope.FieldByName("DeletedOn")
-		isDelField, hasIsDelField := scope.FieldByName("IsDel")
-		if !scope.Search.Unscoped && hasDeletedOnField && hasIsDelField {
-			now := time.Now().Unix()
-			scope.Raw(fmt.Sprintf(
-				"UPDATE %v SET %v=%v, %v=%v%v%v",
-				scope.QuotedTableName(),
-				scope.Quote(deleteOnField.DBName),
-				scope.AddToVars(now),
-				scope.Quote(isDelField.DBName),
-				scope.AddToVars(1),
-				addExtraSpaceIfExist(scope.CombinedConditionSql()),
-				addExtraSpaceIfExist(extraOption),
-			)).Exec()
-		} else {
-			scope.Raw(fmt.Sprintf(
-				"DELETE FROM %v%v%v",
-				scope.QuotedTableName(),
-				addExtraSpaceIfExist(scope.CombinedConditionSql()),
-				addExtraSpaceIfExist(extraOption),
-			)).Exec()
-		}
-	}
-}
-
-func addExtraSpaceIfExist(str string) string {
-	if str != "" {
-		return " " + str
-	}
-	return ""
 }
